--- a/client/src/components/footer/Footer.scss
+++ b/client/src/components/footer/Footer.scss
@@ -1,7 +1,9 @@
-.header{
+.footer {
     background-color: black;
+    width: 100%;
     height: 150px;
-    .header_item1{
+
+    &_item1 {
         height: 39px;
         background-color: aqua;
     }
