--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -1,9 +1,11 @@
+@use '../../colors';
+
 .header {
-    background-color: var(--black-color);
+    background-color: colors.$black-color;
     height: 175px;
     flex-direction: column;
     display: flex;
-    border-bottom: 5px solid var(--coler-btn);
+    border-bottom: 5px solid colors.$coler-btn;
 
     .header_item1 {
         height: 39px;
@@ -34,7 +36,7 @@
                     }
 
                     &:hover {
-                        background-color: var(--coler-hover);
+                        background-color: colors.$coler-hover;
                         cursor: pointer;
                     }
                 }
@@ -85,14 +87,14 @@
                         display: flex;
                         align-items: center;
                         justify-content: center;
-                        background-color: var(--coler-btn);
-                        color: var(--text-color);
+                        background-color: colors.$coler-btn;
+                        color: colors.$text-color;
                         border-radius: 3px;
                         padding: 16px;
 
                         span {
                             margin: 0 2px;
-                            color: var(--text-color);
+                            color: colors.$text-color;
 
                             &:hover {
                                 text-decoration: underline;
@@ -111,7 +113,7 @@
         align-items: center;
         height: 96px;
         justify-content: center;
-        background-image: linear-gradient(45deg, #000000 30%, #fefefe 30%);
+        // background-image: linear-gradient(45deg, #000000 30%, #fefefe 30%);
 
         .wrap_header_item2 {
             height: 100px;
@@ -133,11 +135,11 @@
 
                     .header_logo_item:nth-child(1) {
                         margin-right: 22px;
-                        color: var(--coler-btn);
+                        color: colors.$coler-btn;
                     }
 
                     .header_logo_item:nth-child(2) {
-                        color: var(--text-color);
+                        color: colors.$text-color;
                     }
                 }
             }
@@ -147,10 +149,9 @@
                 width: 40%;
                 display: flex;
                 box-shadow: 0 0 2px 0px;
-                background-color: var(--text-color);
+                background-color: colors.$text-color;
                 margin-left: 45px;
-                border-top-left-radius: 5px;
-                border-bottom-left-radius: 5px;
+                border-radius: 5px;
 
                 .search {
                     height: 100%;
@@ -159,13 +160,13 @@
 
                     .search_input {
                         width: 100%;
-                        color: var(--black-color);
+                        color: colors.$black-color;
                         height: 100%;
                         font-size: 17px;
                         border: none;
                         background: transparent;
                         outline: none;
-                        caret-color: var(--coler-btn);
+                        caret-color: colors.$coler-btn;
                     }
                 }
 
@@ -181,15 +182,15 @@
                         border-radius: 5px;
                         display: flex;
                         height: 91%;
-                        background-color: var(--coler-btn);
+                        background-color: colors.$coler-btn;
                         align-items: center;
-                        color: var(--text-color);
+                        color: colors.$text-color;
                         justify-content: center;
                     }
                     &:hover{
                         cursor: pointer;
                         span{
-                            color: var(--coler-hover);
+                            color: colors.$coler-hover;
                         }
                     }
                 }
@@ -202,18 +203,19 @@
 
                 svg {
                     font-size: 35px;
-                    color: var(--coler-btn);
+                    color: colors.$coler-btn;
                 }
 
                 .number-cart {
                     position: absolute;
-                    top: 0;
-                    right: 0;
-                    width: 20px;
-                    height: 20px;
+                    top: 0px;
+                    right: -7px;
+                    width: 25px;
+                    height: 25px;
                     border-radius: 50px;
                     border: 1px solid;
-                    background-color: #fff;
+                    background-color: red;
+                    color: white;
                     display: flex;
                     align-items: center;
                     justify-content: center;
@@ -252,12 +254,12 @@
                     margin-right: 15px;
     
                     svg {
-                        color: var(--text-color);
+                        color: colors.$text-color;
                         margin-right: 5px;
                     }
     
                     span {
-                        color: var(--text-color);
+                        color: colors.$text-color;
                     }
     
                     .icondow {
@@ -268,10 +270,10 @@
                     &:hover{
                         cursor: pointer;
                         svg{
-                            color: var(--coler-hover);
+                            color: colors.$coler-hover;
                         }
                         span{
-                            color: var(--coler-hover);
+                            color: colors.$coler-hover;
                         }
                     }
                 }
@@ -281,11 +283,11 @@
                     justify-content: center;
                     margin-left: 15px;
                     svg{
-                        color: var(--coler-btn);
+                        color: colors.$coler-btn;
                         margin-right: 5px;
                     }
                     span{
-                        color: var(--text-color);
+                        color: colors.$text-color;
                     }
                 }
             }
