--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -8,12 +8,14 @@
 body {
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
 }
 
 #root {
     width: 100%;
     height: 100%;
     background-color: #dddddd;
+    overflow: hidden;
 
 }
 
