--- a/client/src/Page/Auth/Register.scss
+++ b/client/src/Page/Auth/Register.scss
@@ -33,14 +33,9 @@
             width: 100%;
             height: 45px;
             color: red;
-
-            & span {
-                width: 350px;
-                position: absolute;
-                left: 50%;
-                top: 50%;
-                transform: translate(-50%, -50%);
-            }
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         & div {
