--- a/client/src/Page/Auth/ChangePassword.scss
+++ b/client/src/Page/Auth/ChangePassword.scss
@@ -1,4 +1,5 @@
 @use "../../colors";
+
 .change-password {
     width: 400px;
     height: 520px;
@@ -32,14 +33,9 @@
             width: 100%;
             height: 45px;
             color: red;
-
-            & span {
-                width: 250px;
-                position: absolute;
-                left: 50%;
-                top: 50%;
-                transform: translate(-50%, -50%);
-            }
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         & div {
