--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -81,27 +81,27 @@
                         transform: translateY(2px);
                     }
 
-                    .wrap_btn_login-logout {
-                        width: 100%;
-                        height: 100%;
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        background-color: colors.$coler-btn;
-                        color: colors.$text-color;
-                        border-radius: 3px;
-                        padding: 16px;
+                    // .wrap_btn_login-logout {
+                    //     width: 100%;
+                    //     height: 100%;
+                    //     display: flex;
+                    //     align-items: center;
+                    //     justify-content: center;
+                    //     background-color: colors.$coler-btn;
+                    //     color: colors.$text-color;
+                    //     border-radius: 3px;
+                    //     padding: 16px;
 
-                        span {
-                            margin: 0 2px;
-                            color: colors.$text-color;
+                    //     span {
+                    //         margin: 0 2px;
+                    //         color: colors.$text-color;
 
-                            &:hover {
-                                text-decoration: underline;
-                                cursor: pointer;
-                            }
-                        }
-                    }
+                    //         &:hover {
+                    //             text-decoration: underline;
+                    //             cursor: pointer;
+                    //         }
+                    //     }
+                    // }
                 }
             }
         }
