--- a/client/src/components/Account/Account.scss
+++ b/client/src/components/Account/Account.scss
@@ -26,24 +26,42 @@
     }
 
     &.logon {
+        font-weight: bold;
         width: 100%;
-        height: 100%;
+        height: 90%;
+        border-radius: 5px;
         background-color: colors.$coler-btn;
-        // display: flex;
-        // flex-direction: column;
         position: relative;
+        cursor: pointer;
+        padding: 10px;
+
+        &:hover .drop-list-item {
+            opacity: 1;
+            visibility: visible;
+        }
 
         & .drop-list-item {
+            opacity: 0;
+            visibility: hidden;
             width: 100%;
             background-color: colors.$coler-btn;
             position: absolute;
+            left: 0px;
             top: 100%;
             z-index: 10;
 
-            & a {
-                width: 90%;
-                height: 30px;
-                background-color: colors.$coler-btn;
+            & div {
+                & a {
+                    font-weight: bold;
+                    position: relative;
+                    width: 100%;
+                    height: 30px;
+                    background-color: white;
+
+                    &:hover {
+                        background-color: colors.$coler-btn;
+                    }
+                }
             }
         }
     }
