--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -44,6 +44,25 @@
 
             .header_item1-2 {
                 display: flex;
+                .header_item_1-2_btn:nth-child(1){
+                    background-color: colors.$coler-btn;
+                    border-radius: 2px;
+                    position: relative;
+                    padding: 0 10px;
+                    span{
+                        color: aliceblue;
+                    }
+                    p{
+                        color: aliceblue;
+                    }
+                    a{
+                        &:hover{
+                            span{
+                                text-decoration: underline;
+                            }
+                        }
+                    }
+                }
 
                 .header_item_1-2_btn {
                     margin: 0 13px;
@@ -62,15 +81,15 @@
                         }
                     }
 
-                    &:hover {
-                        color: rgb(112, 112, 112);
+                    // &:hover {
+                    //     color: rgb(112, 112, 112);
 
-                        a {
-                            color: rgb(112, 112, 112);
-                        }
+                    //     a {
+                    //         color: rgb(112, 112, 112);
+                    //     }
 
-                        cursor: pointer;
-                    }
+                    //     cursor: pointer;
+                    // }
 
                     .text-thongbao {
                         margin-right: 5px;
