--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -93,6 +93,8 @@
 
                     .text-thongbao {
                         margin-right: 5px;
+                        width: max-content;
+                        cursor: pointer;
                     }
 
                     .thongbao-icon {
