Add padding on .drop-list-main

--- a/client/src/components/Account/Account.scss
+++ b/client/src/components/Account/Account.scss
@@ -28,8 +28,9 @@
     &.logon {
         .drop-list-main {
             width: 100%;
-            height: 100%;
+            height: 90%;
             position: relative;
+            padding: 10px;
             display: flex;
             align-items: center;
             justify-content: center;
